After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767306 - Fix some typos in libide/ide-buffer-manager.c
Fix some typos in libide/ide-buffer-manager.c
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-06 19:20 UTC by Matthew Leeds
Modified: 2016-06-06 19:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix some typos in libide/ide-buffer-manager.c (3.35 KB, patch)
2016-06-06 19:20 UTC, Matthew Leeds
committed Details | Review

Description Matthew Leeds 2016-06-06 19:20:00 UTC
There are some typos and grammatical errors in the code comments.
Comment 1 Matthew Leeds 2016-06-06 19:20:03 UTC
Created attachment 329228 [details] [review]
Fix some typos in libide/ide-buffer-manager.c
Comment 2 Christian Hergert 2016-06-06 19:24:39 UTC
Review of attachment 329228 [details] [review]:

LGTM
Comment 3 Christian Hergert 2016-06-06 19:32:31 UTC
Thanks!

Attachment 329228 [details] pushed as 6a1d824 - Fix some typos in libide/ide-buffer-manager.c