Fix some typos in libide/ide-buffer-manager.c

https://bugzilla.gnome.org/show_bug.cgi?id=767306